maze.pledge.PledgeMaze.scala.error
Erreur de compilation :
PledgeMaze:76: error: not found: value x
      right(); x -= 1;
               ^